--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -6,7 +6,7 @@
 \newacronym{glonass}{GLONASS}{Globalnaya Navigatsionnaya Sputnikovaya Sistema}
 \newacronym{enu}{ENU}{East North Up}
 \newacronym{ecef}{ECEF}{Earth Centered, Earth Fixed}
-\newacronym{wgs84}{WGS84}{World Geodetic System}
+\newacronym{wgs}{WGS84}{World Geodetic System}
 \newacronym{ahrs}{AHRS}{Attitude and Heading Reference System}
 \newacronym{dcm}{DCM}{Direct Cosine Matrix}
 \newacronym{cpu}{CPU}{Central Processing Unit}
@@ -27,7 +27,7 @@
 \newacronym{scl}{SCL}{Serial Clock}
 \newacronym{ins}{INS}{Inertial Navigation System}
 \newacronym{rdp}{RDP}{Ramer-Douglas-Peucke}
-\newacronym{mae}{MAE}{Mean Average Erro}
+\newacronym{mae}{MAE}{Mean Average Error}
 \newacronym{aqua}{AQUA}{Algebraic Quaternion Algorithm}
 \newacronym{famc}{FAMC}{Fast Accelerometer-Magnetometer Combination}
 \newacronym{flae}{FLAE}{Fast Linear Attitude Estimator}
