--- a/tables/ecef.tex
+++ b/tables/ecef.tex
@@ -14,7 +14,7 @@
             Second eccentricity squared & $e'^{2}$ & 6.739 496 742 28x10-3 \\
             \hline
         \end{tabular}
-        \caption{WGS 84 needed parameters to convert ECEF coordinates into ENU. \cite{soler1988coordinate}}
+        \caption{WGS 84 needed parameters to convert \acrshort{ecef} coordinates into \acrshort{enu}. \cite{soler1988coordinate}}
         \label{tab:WGS}
     \end{center}
 \end{table}
