--- a/tables/ranked_displacement.tex
+++ b/tables/ranked_displacement.tex
@@ -3,23 +3,23 @@
         % \resizebox{1\linewidth}{!}{
         \begin{tabular}[t]{lcccc}
             \hline
-            Algorithm     & Displacement Error[$m$] & Displacement Error[\%] \\
+            Algorithm        & Displacement Error[$m$] & Displacement Error[\%] \\
             \hline
-            Mahony        & 1.94                    & 3.72                   \\
-            SAAM          & 2                       & 4.12                   \\
-            Tilt          & 2                       & 4.12                   \\
-            Davenport     & 2.27                    & 4.96                   \\
-            FLAE          & 2.42                    & 5.02                   \\
-            EKF           & 2.59                    & 6.71                   \\
-            OLEQ          & 2.65                    & 4.65                   \\
-            ROLEQ         & 2.71                    & 4.92                   \\
-            Madgwick      & 3.86                    & 8.35                   \\
-            Complementary & 5.49                    & 10.28                  \\
-            AQUA          & 6.45                    & 18.51                  \\
-            QUEST         & 10.69                   & 22.55                  \\
-            FAMC          & 15.43                   & 22.11                  \\
-            AngularRate   & 16.35                   & 23.53                  \\
-            Fourati       & 24.19                   & 36.14                  \\
+            Mahony           & 1.94                    & 3.72                   \\
+            \acrshort{saam}  & 2                       & 4.12                   \\
+            Tilt             & 2                       & 4.12                   \\
+            Davenport        & 2.27                    & 4.96                   \\
+            \acrshort{flae}  & 2.42                    & 5.02                   \\
+            \acrshort{ekf}   & 2.59                    & 6.71                   \\
+            \acrshort{oleq}  & 2.65                    & 4.65                   \\
+            \acrshort{roleq} & 2.71                    & 4.92                   \\
+            Madgwick         & 3.86                    & 8.35                   \\
+            Complementary    & 5.49                    & 10.28                  \\
+            \acrshort{aqua}  & 6.45                    & 18.51                  \\
+            \acrshort{quest} & 10.69                   & 22.55                  \\
+            \acrshort{famc}  & 15.43                   & 22.11                  \\
+            AngularRate      & 16.35                   & 23.53                  \\
+            Fourati          & 24.19                   & 36.14                  \\
         \end{tabular}
         % }
         \caption{ Algorithms ranked according to of how well performed at displacement error. }
