--- a/tables/ranked_turn.tex
+++ b/tables/ranked_turn.tex
@@ -3,23 +3,23 @@
         % \resizebox{1\linewidth}{!}{
         \begin{tabular}[t]{lcccc}
             \hline
-            Algorithm     & Turn Error[$m$] & Turn Error[\%] \\
+            Algorithm        & Turn Error[$m$] & Turn Error[\%] \\
             \hline
-            SAAM          & 2.79            & 6.93           \\
-            Tilt          & 2.79            & 6.93           \\
-            Mahony        & 2.93            & 6.97           \\
-            Davenport     & 3.01            & 7.95           \\
-            OLEQ          & 3.17            & 7.99           \\
-            FLAE          & 3.19            & 7.96           \\
-            EKF           & 3.21            & 9.27           \\
-            ROLEQ         & 3.35            & 7.92           \\
-            Madgwick      & 4.64            & 10.42          \\
-            Complementary & 6.72            & 13.44          \\
-            AQUA          & 9.15            & 26.54          \\
-            QUEST         & 16.34           & 30.34          \\
-            FAMC          & 22.57           & 35.22          \\
-            AngularRate   & 25.96           & 39.64          \\
-            Fourati       & 31.87           & 48.16          \\
+            \acrshort{saam}  & 2.79            & 6.93           \\
+            Tilt             & 2.79            & 6.93           \\
+            Mahony           & 2.93            & 6.97           \\
+            Davenport        & 3.01            & 7.95           \\
+            \acrshort{oleq}  & 3.17            & 7.99           \\
+            \acrshort{flae}  & 3.19            & 7.96           \\
+            \acrshort{ekf}   & 3.21            & 9.27           \\
+            \acrshort{roleq} & 3.35            & 7.92           \\
+            Madgwick         & 4.64            & 10.42          \\
+            Complementary    & 6.72            & 13.44          \\
+            \acrshort{aqua}  & 9.15            & 26.54          \\
+            \acrshort{quest} & 16.34           & 30.34          \\
+            \acrshort{famc}  & 22.57           & 35.22          \\
+            AngularRate      & 25.96           & 39.64          \\
+            Fourati          & 31.87           & 48.16          \\
         \end{tabular}
         % }
         \caption{ Algorithms ranked according to of how well performed at turn error. }
