--- a/tables/squares/spiral.tex
+++ b/tables/squares/spiral.tex
@@ -5,26 +5,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 41.51                   & 28.05                  & 61.37           & 41.47          \\
-                AQUA          & 3.34                    & 2.26                   & 6.23            & 4.21           \\
-                Complementary & 2.86                    & 1.93                   & 6.92            & 4.67           \\
-                Davenport     & 2.64                    & 1.78                   & 3.02            & 2.04           \\
-                EKF           & 3.01                    & 2.03                   & 3.03            & 2.05           \\
-                FAMC          & 39.96                   & 27.00                  & 48.09           & 32.49          \\
-                FLAE          & 3.18                    & 2.15                   & 3.71            & 2.51           \\
-                Fourati       & 41.45                   & 28.00                  & 61.91           & 41.83          \\
-                Madgwick      & 2.74                    & 1.85                   & 2.46            & 1.66           \\
-                Mahony        & 2.81                    & 1.90                   & 3.47            & 2.34           \\
-                OLEQ          & 3.26                    & 2.20                   & 3.06            & 2.07           \\
-                QUEST         & 19.97                   & 13.50                  & 35.23           & 23.80          \\
-                ROLEQ         & 3.39                    & 2.29                   & 3.17            & 2.14           \\
-                SAAM          & 2.73                    & 1.84                   & 3.29            & 2.23           \\
-                Tilt          & 2.73                    & 1.84                   & 3.29            & 2.23           \\
+                AngularRate      & 41.51                   & 28.05                  & 61.37           & 41.47          \\
+                \acrshort{aqua}  & 3.34                    & 2.26                   & 6.23            & 4.21           \\
+                Complementary    & 2.86                    & 1.93                   & 6.92            & 4.67           \\
+                Davenport        & 2.64                    & 1.78                   & 3.02            & 2.04           \\
+                \acrshort{ekf}   & 3.01                    & 2.03                   & 3.03            & 2.05           \\
+                \acrshort{famc}  & 39.96                   & 27.00                  & 48.09           & 32.49          \\
+                \acrshort{flae}  & 3.18                    & 2.15                   & 3.71            & 2.51           \\
+                Fourati          & 41.45                   & 28.00                  & 61.91           & 41.83          \\
+                Madgwick         & 2.74                    & 1.85                   & 2.46            & 1.66           \\
+                Mahony           & 2.81                    & 1.90                   & 3.47            & 2.34           \\
+                \acrshort{oleq}  & 3.26                    & 2.20                   & 3.06            & 2.07           \\
+                \acrshort{quest} & 19.97                   & 13.50                  & 35.23           & 23.80          \\
+                \acrshort{roleq} & 3.39                    & 2.29                   & 3.17            & 2.14           \\
+                \acrshort{saam}  & 2.73                    & 1.84                   & 3.29            & 2.23           \\
+                Tilt             & 2.73                    & 1.84                   & 3.29            & 2.23           \\
 
                 \hline
-                Average       & 11.70                   & 7.91                   & 16.55           & 11.18
+                Average          & 11.70                   & 7.91                   & 16.55           & 11.18
             \end{tabular}
         }
         \caption{Spiral position estimation error (displacement and turn) of the sensor fusion algorithms. }
