--- a/tables/squares/square4.tex
+++ b/tables/squares/square4.tex
@@ -4,26 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 5.97                    & 37.29                  & 7.29            & 45.58          \\
-                AQUA          & 4.12                    & 25.75                  & 4.20            & 26.23          \\
-                Complementary & 1.20                    & 7.50                   & 1.46            & 9.13           \\
-                Davenport     & 0.69                    & 4.31                   & 0.43            & 2.70           \\
-                EKF           & 1.09                    & 6.79                   & 1.53            & 9.56           \\
-                FAMC          & 6.01                    & 37.57                  & 6.98            & 43.61          \\
-                FLAE          & 0.69                    & 4.32                   & 0.38            & 2.37           \\
-                Fourati       & 9.08                    & 56.78                  & 9.74            & 60.87          \\
-                Madgwick      & 1.02                    & 6.40                   & 1.18            & 7.36           \\
-                Mahony        & 0.53                    & 3.34                   & 0.37            & 2.29           \\
-                OLEQ          & 0.60                    & 3.74                   & 0.52            & 3.23           \\
-                QUEST         & 5.07                    & 31.71                  & 5.57            & 34.79          \\
-                ROLEQ         & 0.78                    & 4.90                   & 0.88            & 5.48           \\
-                SAAM          & 0.59                    & 3.69                   & 0.37            & 2.33           \\
-                Tilt          & 0.59                    & 3.69                   & 0.37            & 2.33           \\
+                AngularRate      & 5.97                    & 37.29                  & 7.29            & 45.58          \\
+                \acrshort{aqua}  & 4.12                    & 25.75                  & 4.20            & 26.23          \\
+                Complementary    & 1.20                    & 7.50                   & 1.46            & 9.13           \\
+                Davenport        & 0.69                    & 4.31                   & 0.43            & 2.70           \\
+                \acrshort{ekf}   & 1.09                    & 6.79                   & 1.53            & 9.56           \\
+                \acrshort{famc}  & 6.01                    & 37.57                  & 6.98            & 43.61          \\
+                \acrshort{flae}  & 0.69                    & 4.32                   & 0.38            & 2.37           \\
+                Fourati          & 9.08                    & 56.78                  & 9.74            & 60.87          \\
+                Madgwick         & 1.02                    & 6.40                   & 1.18            & 7.36           \\
+                Mahony           & 0.53                    & 3.34                   & 0.37            & 2.29           \\
+                \acrshort{oleq}  & 0.60                    & 3.74                   & 0.52            & 3.23           \\
+                \acrshort{quest} & 5.07                    & 31.71                  & 5.57            & 34.79          \\
+                \acrshort{roleq} & 0.78                    & 4.90                   & 0.88            & 5.48           \\
+                \acrshort{saam}  & 0.59                    & 3.69                   & 0.37            & 2.33           \\
+                Tilt             & 0.59                    & 3.69                   & 0.37            & 2.33           \\
 
                 \hline
-                Average       & 2.54                    & 15.85                  & 2.75            & 17.19
+                Average          & 2.54                    & 15.85                  & 2.75            & 17.19
             \end{tabular}
         }
         \caption{4 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
