--- a/tables/triangles/triangle16.tex
+++ b/tables/triangles/triangle16.tex
@@ -4,26 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 12.84                   & 26.74                  & 24.84           & 51.76          \\
-                AQUA          & 7.81                    & 16.28                  & 12.64           & 26.33          \\
-                Complementary & 2.60                    & 5.41                   & 3.30            & 6.87           \\
-                Davenport     & 2.49                    & 5.18                   & 2.37            & 4.93           \\
-                EKF           & 2.44                    & 5.09                   & 1.59            & 3.32           \\
-                FAMC          & 11.93                   & 24.86                  & 23.55           & 49.06          \\
-                FLAE          & 2.48                    & 5.18                   & 2.27            & 4.73           \\
-                Fourati       & 23.17                   & 48.26                  & 29.76           & 62.01          \\
-                Madgwick      & 6.88                    & 14.32                  & 8.29            & 17.28          \\
-                Mahony        & 1.79                    & 3.74                   & 1.87            & 3.90           \\
-                OLEQ          & 2.43                    & 5.05                   & 1.68            & 3.50           \\
-                QUEST         & 9.51                    & 19.82                  & 11.48           & 23.92          \\
-                ROLEQ         & 2.56                    & 5.34                   & 2.19            & 4.57           \\
-                SAAM          & 1.88                    & 3.91                   & 1.81            & 3.77           \\
-                Tilt          & 1.88                    & 3.91                   & 1.81            & 3.77           \\
+                AngularRate      & 12.84                   & 26.74                  & 24.84           & 51.76          \\
+                \acrshort{aqua}  & 7.81                    & 16.28                  & 12.64           & 26.33          \\
+                Complementary    & 2.60                    & 5.41                   & 3.30            & 6.87           \\
+                Davenport        & 2.49                    & 5.18                   & 2.37            & 4.93           \\
+                \acrshort{ekf}   & 2.44                    & 5.09                   & 1.59            & 3.32           \\
+                \acrshort{famc}  & 11.93                   & 24.86                  & 23.55           & 49.06          \\
+                \acrshort{flae}  & 2.48                    & 5.18                   & 2.27            & 4.73           \\
+                Fourati          & 23.17                   & 48.26                  & 29.76           & 62.01          \\
+                Madgwick         & 6.88                    & 14.32                  & 8.29            & 17.28          \\
+                Mahony           & 1.79                    & 3.74                   & 1.87            & 3.90           \\
+                \acrshort{oleq}  & 2.43                    & 5.05                   & 1.68            & 3.50           \\
+                \acrshort{quest} & 9.51                    & 19.82                  & 11.48           & 23.92          \\
+                \acrshort{roleq} & 2.56                    & 5.34                   & 2.19            & 4.57           \\
+                \acrshort{saam}  & 1.88                    & 3.91                   & 1.81            & 3.77           \\
+                Tilt             & 1.88                    & 3.91                   & 1.81            & 3.77           \\
 
                 \hline
-                Average       & 6.18                    & 12.87                  & 8.63            & 17.98
+                Average          & 6.18                    & 12.87                  & 8.63            & 17.98
             \end{tabular}
         }
         \caption{16 meter triangle position estimation error (displacement and turn) of the sensor fusion algorithms. }
