--- a/tables/triangles/triangle28.tex
+++ b/tables/triangles/triangle28.tex
@@ -4,26 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 22.91                   & 27.28                  & 48.97           & 58.29          \\
-                AQUA          & 6.77                    & 8.06                   & 15.53           & 18.49          \\
-                Complementary & 5.69                    & 6.78                   & 10.22           & 12.16          \\
-                Davenport     & 3.93                    & 4.68                   & 5.06            & 6.02           \\
-                EKF           & 3.52                    & 4.19                   & 5.04            & 5.99           \\
-                FAMC          & 21.07                   & 25.08                  & 46.74           & 55.64          \\
-                FLAE          & 3.88                    & 4.62                   & 4.98            & 5.93           \\
-                Fourati       & 35.63                   & 42.41                  & 53.27           & 63.42          \\
-                Madgwick      & 15.58                   & 18.55                  & 17.78           & 21.16          \\
-                Mahony        & 2.93                    & 3.49                   & 4.69            & 5.59           \\
-                OLEQ          & 4.69                    & 5.58                   & 5.05            & 6.01           \\
-                QUEST         & 15.18                   & 18.08                  & 30.32           & 36.09          \\
-                ROLEQ         & 4.38                    & 5.22                   & 5.40            & 6.43           \\
-                SAAM          & 2.93                    & 3.48                   & 4.54            & 5.40           \\
-                Tilt          & 2.93                    & 3.48                   & 4.54            & 5.40           \\
+                AngularRate      & 22.91                   & 27.28                  & 48.97           & 58.29          \\
+                \acrshort{aqua}  & 6.77                    & 8.06                   & 15.53           & 18.49          \\
+                Complementary    & 5.69                    & 6.78                   & 10.22           & 12.16          \\
+                Davenport        & 3.93                    & 4.68                   & 5.06            & 6.02           \\
+                \acrshort{ekf}   & 3.52                    & 4.19                   & 5.04            & 5.99           \\
+                \acrshort{famc}  & 21.07                   & 25.08                  & 46.74           & 55.64          \\
+                \acrshort{flae}  & 3.88                    & 4.62                   & 4.98            & 5.93           \\
+                Fourati          & 35.63                   & 42.41                  & 53.27           & 63.42          \\
+                Madgwick         & 15.58                   & 18.55                  & 17.78           & 21.16          \\
+                Mahony           & 2.93                    & 3.49                   & 4.69            & 5.59           \\
+                \acrshort{oleq}  & 4.69                    & 5.58                   & 5.05            & 6.01           \\
+                \acrshort{quest} & 15.18                   & 18.08                  & 30.32           & 36.09          \\
+                \acrshort{roleq} & 4.38                    & 5.22                   & 5.40            & 6.43           \\
+                \acrshort{saam}  & 2.93                    & 3.48                   & 4.54            & 5.40           \\
+                Tilt             & 2.93                    & 3.48                   & 4.54            & 5.40           \\
 
                 \hline
-                Average       & 10.14                   & 12.07                  & 17.47           & 20.80
+                Average          & 10.14                   & 12.07                  & 17.47           & 20.80
             \end{tabular}
         }
         \caption{28 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
