--- a/tables/triangles/triangle4.tex
+++ b/tables/triangles/triangle4.tex
@@ -4,26 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 4.53                    & 37.72                  & 7.35            & 61.28          \\
-                AQUA          & 3.10                    & 25.82                  & 4.27            & 35.61          \\
-                Complementary & 3.85                    & 32.08                  & 3.43            & 28.59          \\
-                Davenport     & 1.12                    & 9.30                   & 1.39            & 11.57          \\
-                EKF           & 1.24                    & 10.31                  & 0.49            & 4.09           \\
-                FAMC          & 4.43                    & 36.90                  & 7.12            & 59.37          \\
-                FLAE          & 1.09                    & 9.08                   & 1.32            & 11.00          \\
-                Fourati       & 7.36                    & 61.33                  & 8.47            & 70.60          \\
-                Madgwick      & 1.94                    & 16.15                  & 1.02            & 8.51           \\
-                Mahony        & 0.90                    & 7.50                   & 0.99            & 8.28           \\
-                OLEQ          & 1.18                    & 9.81                   & 1.03            & 8.58           \\
-                QUEST         & 2.84                    & 23.65                  & 2.58            & 21.50          \\
-                ROLEQ         & 1.17                    & 9.71                   & 0.85            & 7.06           \\
-                SAAM          & 1.05                    & 8.71                   & 1.08            & 9.01           \\
-                Tilt          & 1.05                    & 8.71                   & 1.08            & 9.01           \\
+                AngularRate      & 4.53                    & 37.72                  & 7.35            & 61.28          \\
+                \acrshort{aqua}  & 3.10                    & 25.82                  & 4.27            & 35.61          \\
+                Complementary    & 3.85                    & 32.08                  & 3.43            & 28.59          \\
+                Davenport        & 1.12                    & 9.30                   & 1.39            & 11.57          \\
+                \acrshort{ekf}   & 1.24                    & 10.31                  & 0.49            & 4.09           \\
+                \acrshort{famc}  & 4.43                    & 36.90                  & 7.12            & 59.37          \\
+                \acrshort{flae}  & 1.09                    & 9.08                   & 1.32            & 11.00          \\
+                Fourati          & 7.36                    & 61.33                  & 8.47            & 70.60          \\
+                Madgwick         & 1.94                    & 16.15                  & 1.02            & 8.51           \\
+                Mahony           & 0.90                    & 7.50                   & 0.99            & 8.28           \\
+                \acrshort{oleq}  & 1.18                    & 9.81                   & 1.03            & 8.58           \\
+                \acrshort{quest} & 2.84                    & 23.65                  & 2.58            & 21.50          \\
+                \acrshort{roleq} & 1.17                    & 9.71                   & 0.85            & 7.06           \\
+                \acrshort{saam}  & 1.05                    & 8.71                   & 1.08            & 9.01           \\
+                Tilt             & 1.05                    & 8.71                   & 1.08            & 9.01           \\
 
                 \hline
-                Average       & 2.45                    & 20.45                  & 2.83            & 23.60
+                Average          & 2.45                    & 20.45                  & 2.83            & 23.60
             \end{tabular}
         }
         \caption{4 meter triangle position estimation error (displacement and turn) of the sensor fusion algorithms. }
