--- a/tables/lines/line4.tex
+++ b/tables/lines/line4.tex
@@ -6,7 +6,7 @@
                 \hline
                 Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate & 0.16                    & 3.90                   & 0.50            & 12.62          \\            AQUA            & 0.90  & 22.59 & 1.46 & 36.50              \\            Complementary            & 0.34  & 8.45 & 0.55 & 13.66              \\            Davenport            & 0.49  & 12.28 & 0.64 & 16.02              \\            EKF            & 1.01  & 25.28 & 1.35 & 33.73              \\            FAMC            & 0.17  & 4.25 & 0.50 & 12.57              \\            FLAE            & 0.49  & 12.29 & 0.64 & 16.04              \\            Fourati            & 0.32  & 8.01 & 0.54 & 13.39              \\            Madgwick            & 0.74  & 18.57 & 0.74 & 18.51              \\            Mahony            & 0.25  & 6.21 & 0.55 & 13.80              \\            OLEQ            & 0.13  & 3.24 & 0.41 & 10.28              \\            QUEST            & 2.14  & 53.59 & 2.07 & 51.69              \\            ROLEQ            & 0.16  & 4.06 & 0.24 & 6.06              \\            SAAM            & 0.34  & 8.53 & 0.55 & 13.82              \\            Tilt            & 0.34  & 8.53 & 0.55 & 13.82              \\
+                AngularRate & 0.16                    & 3.90                   & 0.50            & 12.62          \\            \acrshort{aqua}            & 0.90  & 22.59 & 1.46 & 36.50              \\            Complementary            & 0.34  & 8.45 & 0.55 & 13.66              \\            Davenport            & 0.49  & 12.28 & 0.64 & 16.02              \\            \acrshort{ekf}            & 1.01  & 25.28 & 1.35 & 33.73              \\            \acrshort{famc}            & 0.17  & 4.25 & 0.50 & 12.57              \\            \acrshort{flae}            & 0.49  & 12.29 & 0.64 & 16.04              \\            Fourati            & 0.32  & 8.01 & 0.54 & 13.39              \\            Madgwick            & 0.74  & 18.57 & 0.74 & 18.51              \\            Mahony            & 0.25  & 6.21 & 0.55 & 13.80              \\            \acrshort{oleq}            & 0.13  & 3.24 & 0.41 & 10.28              \\            \acrshort{quest}            & 2.14  & 53.59 & 2.07 & 51.69              \\            \acrshort{roleq}            & 0.16  & 4.06 & 0.24 & 6.06              \\            \acrshort{saam}            & 0.34  & 8.53 & 0.55 & 13.82              \\            Tilt            & 0.34  & 8.53 & 0.55 & 13.82              \\
                 \hline
                 Average     & 0.53                    & 13.32                  & 0.75            & 18.84
             \end{tabular}
