--- a/tables/overall.tex
+++ b/tables/overall.tex
@@ -3,25 +3,25 @@
         \resizebox{1\linewidth}{!}{
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 16.35                   & 23.53                  & 25.96           & 39.64          \\
-                AQUA          & 6.45                    & 18.51                  & 9.15            & 26.54          \\
-                Complementary & 5.49                    & 10.28                  & 6.72            & 13.44          \\
-                Davenport     & 2.27                    & 4.96                   & 3.01            & 7.95           \\
-                EKF           & 2.59                    & 6.71                   & 3.21            & 9.27           \\
-                FAMC          & 15.43                   & 22.11                  & 22.57           & 35.22          \\
-                FLAE          & 2.42                    & 5.02                   & 3.19            & 7.96           \\
-                Fourati       & 24.19                   & 36.14                  & 31.87           & 48.16          \\
-                Madgwick      & 3.86                    & 8.35                   & 4.64            & 10.42          \\
-                Mahony        & 1.94                    & 3.72                   & 2.93            & 6.97           \\
-                OLEQ          & 2.65                    & 4.65                   & 3.17            & 7.99           \\
-                QUEST         & 10.69                   & 22.55                  & 16.34           & 30.34          \\
-                ROLEQ         & 2.71                    & 4.92                   & 3.35            & 7.92           \\
-                SAAM          & 2                       & 4.12                   & 2.79            & 6.93           \\
-                Tilt          & 2                       & 4.12                   & 2.79            & 6.93           \\
+                AngularRate      & 16.35                   & 23.53                  & 25.96           & 39.64          \\
+                \acrshort{aqua}  & 6.45                    & 18.51                  & 9.15            & 26.54          \\
+                Complementary    & 5.49                    & 10.28                  & 6.72            & 13.44          \\
+                Davenport        & 2.27                    & 4.96                   & 3.01            & 7.95           \\
+                \acrshort{ekf}   & 2.59                    & 6.71                   & 3.21            & 9.27           \\
+                \acrshort{famc}  & 15.43                   & 22.11                  & 22.57           & 35.22          \\
+                \acrshort{flae}  & 2.42                    & 5.02                   & 3.19            & 7.96           \\
+                Fourati          & 24.19                   & 36.14                  & 31.87           & 48.16          \\
+                Madgwick         & 3.86                    & 8.35                   & 4.64            & 10.42          \\
+                Mahony           & 1.94                    & 3.72                   & 2.93            & 6.97           \\
+                \acrshort{oleq}  & 2.65                    & 4.65                   & 3.17            & 7.99           \\
+                \acrshort{quest} & 10.69                   & 22.55                  & 16.34           & 30.34          \\
+                \acrshort{roleq} & 2.71                    & 4.92                   & 3.35            & 7.92           \\
+                \acrshort{saam}  & 2                       & 4.12                   & 2.79            & 6.93           \\
+                Tilt             & 2                       & 4.12                   & 2.79            & 6.93           \\
                 \hline
-                Average       & 6.74                    & 11.98                  & 9.45            & 17.71
+                Average          & 6.74                    & 11.98                  & 9.45            & 17.71
             \end{tabular}
         }
         \caption{ Overall ranking of how every algorithm performed in the given test. }
