--- a/tables/squares/square16.tex
+++ b/tables/squares/square16.tex
@@ -4,29 +4,29 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 21.87                   & 34.17                  & 26.78           & 41.85          \\
-                AQUA          & 10.13                   & 15.83                  & 10.25           & 16.02          \\
-                Complementary & 15.26                   & 23.85                  & 13.69           & 21.40          \\
-                Davenport     & 2.33                    & 3.65                   & 2.15            & 3.36           \\
-                EKF           & 2.32                    & 3.63                   & 2.35            & 3.67           \\
-                FAMC          & 20.73                   & 32.40                  & 25.26           & 39.47          \\
-                FLAE          & 2.09                    & 3.27                   & 1.82            & 2.84           \\
-                Fourati       & 34.16                   & 53.37                  & 36.37           & 56.83          \\
-                Madgwick      & 1.93                    & 3.02                   & 1.98            & 3.09           \\
-                Mahony        & 1.94                    & 3.02                   & 2.13            & 3.33           \\
-                OLEQ          & 3.52                    & 5.50                   & 2.64            & 4.12           \\
-                QUEST         & 17.97                   & 28.07                  & 19.53           & 30.52          \\
-                ROLEQ         & 3.64                    & 5.69                   & 2.76            & 4.32           \\
-                SAAM          & 2.15                    & 3.36                   & 2.12            & 3.31           \\
-                Tilt          & 2.15                    & 3.36                   & 2.12            & 3.31           \\
+                AngularRate      & 21.87                   & 34.17                  & 26.78           & 41.85          \\
+                \acrshort{aqua}  & 10.13                   & 15.83                  & 10.25           & 16.02          \\
+                Complementary    & 15.26                   & 23.85                  & 13.69           & 21.40          \\
+                Davenport        & 2.33                    & 3.65                   & 2.15            & 3.36           \\
+                \acrshort{ekf}   & 2.32                    & 3.63                   & 2.35            & 3.67           \\
+                \acrshort{famc}  & 20.73                   & 32.40                  & 25.26           & 39.47          \\
+                \acrshort{flae}  & 2.09                    & 3.27                   & 1.82            & 2.84           \\
+                Fourati          & 34.16                   & 53.37                  & 36.37           & 56.83          \\
+                Madgwick         & 1.93                    & 3.02                   & 1.98            & 3.09           \\
+                Mahony           & 1.94                    & 3.02                   & 2.13            & 3.33           \\
+                \acrshort{oleq}  & 3.52                    & 5.50                   & 2.64            & 4.12           \\
+                \acrshort{quest} & 17.97                   & 28.07                  & 19.53           & 30.52          \\
+                \acrshort{roleq} & 3.64                    & 5.69                   & 2.76            & 4.32           \\
+                \acrshort{saam}  & 2.15                    & 3.36                   & 2.12            & 3.31           \\
+                Tilt             & 2.15                    & 3.36                   & 2.12            & 3.31           \\
 
                 \hline
-                Average       & 9.48                    & 14.81                  & 10.13           & 15.83
+                Average          & 9.48                    & 14.81                  & 10.13           & 15.83
             \end{tabular}
         }
-    \end{center}        
+    \end{center}
     \caption{16 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
     \label{tab:16_square}
 
