--- a/tables/squares/square28.tex
+++ b/tables/squares/square28.tex
@@ -4,26 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 35.00                   & 31.25                  & 46.96           & 41.92          \\
-                AQUA          & 12.63                   & 11.28                  & 13.72           & 12.25          \\
-                Complementary & 15.95                   & 14.24                  & 16.54           & 14.77          \\
-                Davenport     & 3.89                    & 3.47                   & 3.20            & 2.86           \\
-                EKF           & 5.17                    & 4.62                   & 5.05            & 4.50           \\
-                FAMC          & 32.67                   & 29.17                  & 45.35           & 40.49          \\
-                FLAE          & 3.84                    & 3.43                   & 3.23            & 2.89           \\
-                Fourati       & 57.83                   & 51.63                  & 66.25           & 59.15          \\
-                Madgwick      & 4.03                    & 3.60                   & 3.58            & 3.20           \\
-                Mahony        & 2.97                    & 2.65                   & 4.64            & 4.15           \\
-                OLEQ          & 5.55                    & 4.95                   & 4.63            & 4.13           \\
-                QUEST         & 26.64                   & 23.78                  & 32.23           & 28.78          \\
-                ROLEQ         & 5.69                    & 5.08                   & 5.40            & 4.82           \\
-                SAAM          & 3.22                    & 2.87                   & 3.37            & 3.01           \\
-                Tilt          & 3.22                    & 2.87                   & 3.37            & 3.01           \\
+                AngularRate      & 35.00                   & 31.25                  & 46.96           & 41.92          \\
+                \acrshort{aqua}  & 12.63                   & 11.28                  & 13.72           & 12.25          \\
+                Complementary    & 15.95                   & 14.24                  & 16.54           & 14.77          \\
+                Davenport        & 3.89                    & 3.47                   & 3.20            & 2.86           \\
+                \acrshort{ekf}   & 5.17                    & 4.62                   & 5.05            & 4.50           \\
+                \acrshort{famc}  & 32.67                   & 29.17                  & 45.35           & 40.49          \\
+                \acrshort{flae}  & 3.84                    & 3.43                   & 3.23            & 2.89           \\
+                Fourati          & 57.83                   & 51.63                  & 66.25           & 59.15          \\
+                Madgwick         & 4.03                    & 3.60                   & 3.58            & 3.20           \\
+                Mahony           & 2.97                    & 2.65                   & 4.64            & 4.15           \\
+                \acrshort{oleq}  & 5.55                    & 4.95                   & 4.63            & 4.13           \\
+                \acrshort{quest} & 26.64                   & 23.78                  & 32.23           & 28.78          \\
+                \acrshort{roleq} & 5.69                    & 5.08                   & 5.40            & 4.82           \\
+                \acrshort{saam}  & 3.22                    & 2.87                   & 3.37            & 3.01           \\
+                Tilt             & 3.22                    & 2.87                   & 3.37            & 3.01           \\
 
                 \hline
-                Average       & 14.55                   & 12.99                  & 17.17           & 15.33
+                Average          & 14.55                   & 12.99                  & 17.17           & 15.33
             \end{tabular}
         }
         \caption{28 meter square position estimation error (displacement and turn) of the sensor fusion algorithms. }
