--- a/tables/squares/squares.tex
+++ b/tables/squares/squares.tex
@@ -4,26 +4,26 @@
 
             \begin{tabular}[t]{lcccc}
                 \hline
-                Algorithm     & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                Algorithm        & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
                 \hline
-                AngularRate   & 32.91                   & 22.24                  & 51.46           & 34.77          \\
-                AQUA          & 7.08                    & 4.78                   & 8.32            & 5.62           \\
-                Complementary & 11.63                   & 7.86                   & 11.34           & 7.66           \\
-                Davenport     & 6.17                    & 4.17                   & 7.21            & 4.87           \\
-                EKF           & 7.29                    & 4.93                   & 8.33            & 5.63           \\
-                FAMC          & 31.83                   & 21.51                  & 38.19           & 25.81          \\
-                FLAE          & 7.61                    & 5.14                   & 9.16            & 6.19           \\
-                Fourati       & 54.90                   & 37.09                  & 73.30           & 49.53          \\
-                Madgwick      & 6.53                    & 4.42                   & 7.53            & 5.09           \\
-                Mahony        & 6.18                    & 4.17                   & 7.18            & 4.85           \\
-                OLEQ          & 6.43                    & 4.35                   & 7.00            & 4.73           \\
-                QUEST         & 12.57                   & 8.49                   & 25.22           & 17.04          \\
-                ROLEQ         & 6.53                    & 4.41                   & 7.06            & 4.77           \\
-                SAAM          & 6.11                    & 4.13                   & 7.23            & 4.88           \\
-                Tilt          & 6.11                    & 4.13                   & 7.23            & 4.88           \\
+                AngularRate      & 32.91                   & 22.24                  & 51.46           & 34.77          \\
+                \acrshort{aqua}  & 7.08                    & 4.78                   & 8.32            & 5.62           \\
+                Complementary    & 11.63                   & 7.86                   & 11.34           & 7.66           \\
+                Davenport        & 6.17                    & 4.17                   & 7.21            & 4.87           \\
+                \acrshort{ekf}   & 7.29                    & 4.93                   & 8.33            & 5.63           \\
+                \acrshort{famc}  & 31.83                   & 21.51                  & 38.19           & 25.81          \\
+                \acrshort{flae}  & 7.61                    & 5.14                   & 9.16            & 6.19           \\
+                Fourati          & 54.90                   & 37.09                  & 73.30           & 49.53          \\
+                Madgwick         & 6.53                    & 4.42                   & 7.53            & 5.09           \\
+                Mahony           & 6.18                    & 4.17                   & 7.18            & 4.85           \\
+                \acrshort{oleq}  & 6.43                    & 4.35                   & 7.00            & 4.73           \\
+                \acrshort{quest} & 12.57                   & 8.49                   & 25.22           & 17.04          \\
+                \acrshort{roleq} & 6.53                    & 4.41                   & 7.06            & 4.77           \\
+                \acrshort{saam}  & 6.11                    & 4.13                   & 7.23            & 4.88           \\
+                Tilt             & 6.11                    & 4.13                   & 7.23            & 4.88           \\
 
                 \hline
-                Average       & 13.99                   & 9.45                   & 18.38           & 12.42
+                Average          & 13.99                   & 9.45                   & 18.38           & 12.42
             \end{tabular}
         }
         \caption{Squares position estimation error (displacement and turn) of the sensor fusion algorithms. }
