--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -11,6 +11,7 @@
 \newacronym{dcm}{DCM}{Direct Cosine Matrix}
 \newacronym{cpu}{CPU}{Central Processing Unit}
 \newacronym{mems}{MEMS}{Micro-Electro-Mechanical Systems}
+\newacronym{marg}{MARG}{Magnetic, Angular Rate, and Gravity}
 \newacronym{ekf}{EKF}{Extended Kalman Filter}
 \newacronym{ecf}{ECF}{Extended Complementary Filter}
 \newacronym{pdr}{PDR}{Pedestrian dead reckoning}
@@ -30,6 +31,7 @@
 \newacronym{mae}{MAE}{Mean Average Error}
 \newacronym{aqua}{AQUA}{Algebraic Quaternion Algorithm}
 \newacronym{famc}{FAMC}{Fast Accelerometer-Magnetometer Combination}
+\newacronym{amc}{AMC}{Accelerometer-Magnetometer combination}
 \newacronym{flae}{FLAE}{Fast Linear Attitude Estimator}
 \newacronym{oleq}{OLEQ}{Optimal Linear Estimator of Quaternion}
 \newacronym{quest}{QUEST}{QUaternion ESTimator}
