--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -1352,3 +1352,113 @@
   year      = {2007},
   publisher = {IOP Publishing}
 }
+
+@article{jia2019quaternions,
+  title   = {Quaternions},
+  author  = {Jia, Yan-Bin},
+  journal = {Course Com S},
+  volume  = {477},
+  pages   = {577},
+  year    = {2019}
+}
+
+@article{valenti2015linear,
+  title     = {A linear Kalman filter for MARG orientation estimation using the algebraic quaternion algorithm},
+  author    = {Valenti, Roberto G and Dryanovski, Ivan and Xiao, Jizhong},
+  journal   = {IEEE Transactions on Instrumentation and Measurement},
+  volume    = {65},
+  number    = {2},
+  pages     = {467--481},
+  year      = {2015},
+  publisher = {IEEE}
+}
+
+@book{davenport1968vector,
+  title     = {A vector approach to the algebra of rotations with applications},
+  author    = {Davenport, Paul B},
+  volume    = {4696},
+  year      = {1968},
+  publisher = {National Aeronautics and Space Administration}
+}
+
+@article{liu2018simplified,
+  title     = {Simplified Attitude Determination Algorithm Using Accelerometer and Magnetometer with Extremely Low Execution Time},
+  author    = {Liu, Zhuohua and Liu, Wei and Gong, Xiangyang and Wu, Jin},
+  journal   = {Journal of Sensors},
+  volume    = {2018},
+  year      = {2018},
+  publisher = {Hindawi}
+}
+
+@article{wu2018super,
+  title     = {A super fast attitude determination algorithm for consumer-level accelerometer and magnetometer},
+  author    = {Wu, Jin and Zhou, Zebo and Fourati, Hassen and Cheng, Yuhua},
+  journal   = {IEEE Transactions on Consumer Electronics},
+  volume    = {64},
+  number    = {3},
+  pages     = {375--381},
+  year      = {2018},
+  publisher = {IEEE}
+}
+
+@article{fourati2010nonlinear,
+  title     = {A nonlinear filtering approach for the attitude and dynamic body acceleration estimation based on inertial and magnetic sensors: Bio-logging application},
+  author    = {Fourati, Hassen and Manamanni, Noureddine and Afilal, Lissan and Handrich, Yves},
+  journal   = {IEEE Sensors Journal},
+  volume    = {11},
+  number    = {1},
+  pages     = {233--244},
+  year      = {2010},
+  publisher = {IEEE}
+}
+
+@article{zhou2018optimal,
+  title     = {Optimal, recursive and sub-optimal linear solutions to attitude determination from vector observations for GNSS/accelerometer/magnetometer orientation measurement},
+  author    = {Zhou, Zebo and Wu, Jin and Wang, Jinling and Fourati, Hassen},
+  journal   = {Remote sensing},
+  volume    = {10},
+  number    = {3},
+  pages     = {377},
+  year      = {2018},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@article{shuster1981three,
+  title   = {Three-axis attitude determination from vector observations},
+  author  = {Shuster, Malcolm David and Oh, S D\_},
+  journal = {Journal of guidance and Control},
+  volume  = {4},
+  number  = {1},
+  pages   = {70--77},
+  year    = {1981}
+}
+
+@inproceedings{shuster1978approximate,
+  title     = {Approximate algorithms for fast optimal attitude computation},
+  author    = {Shuster, M},
+  booktitle = {Guidance and Control Conference},
+  pages     = {1249},
+  year      = {1978}
+}
+
+@article{sola2017quaternion,
+  title   = {Quaternion kinematics for the error-state Kalman filter},
+  author  = {Sola, Joan},
+  journal = {arXiv preprint arXiv:1711.02508},
+  year    = {2017}
+}
+
+@article{fisher2010using,
+  title   = {Using an accelerometer for inclination sensing},
+  author  = {Fisher, Christopher J},
+  journal = {AN-1057, Application note, Analog Devices},
+  pages   = {1--8},
+  year    = {2010}
+}
+
+@article{microelectronics2010tilt,
+  title   = {Tilt measurement using a low-g 3-axis accelerometer},
+  author  = {Microelectronics, ST},
+  journal = {AN3182 Application Note, Microelectronics, ST},
+  year    = {2010}
+}
