Adding calibration role

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -37,3 +37,5 @@
 \newacronym{quest}{QUEST}{QUaternion ESTimator}
 \newacronym{roleq}{ROLEQ}{Recursive Optimal Linear Estimator of Quaternion}
 \newacronym{saam}{SAAM}{Super-fast Attitude from Accelerometer and Magnetometer}
+\newacronym{lma}{LMA}{Levenberg Marquardt Algorithm}
+\newacronym{ned}{NED}{North East Down}
