Refactoring thesis formarting

--- a/settings.tex
+++ b/settings.tex
@@ -41,7 +41,7 @@
 \usepackage{tikz}
 \usepackage{listings}
 \usepackage{longtable}
-\usepackage[acronym]{glossaries}
+\usepackage[acronym,nogroupskip]{glossaries}
 
 % \DeclareUnicodeCharacter{2212}{-}
 
@@ -69,3 +69,4 @@
 
 \makenomenclature
 
+\renewcommand*{\glsclearpage}{\clearpage}
