--- a/thesis.tex
+++ b/thesis.tex
@@ -19,13 +19,11 @@
 \tableofcontents
 \normalfont
 
-\printglossary[type=\acronymtype,title=Abbreviations]
-
-\printglossary[title=Nomenclature]
 
 \listoffigures
 \listoftables
-
+\printglossary[type=\acronymtype, nonumberlist, style=long, title=Abbreviations]
+\printglossary[title=Nomenclature]
 
 %% Fix for the nomenclature spacing
 \newlength{\nomitemorigsep}
