--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -39,3 +39,4 @@
 \newacronym{saam}{SAAM}{Super-fast Attitude from Accelerometer and Magnetometer}
 \newacronym{lma}{LMA}{Levenberg Marquardt Algorithm}
 \newacronym{ned}{NED}{North East Down}
+\newacronym{sip}{SIP}{System-in-package}
